// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when courses are still loading 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  hasLoadingFailed="false"
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll="false"
  canRestoreAll="false"
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  hasLoadingFailed="false"
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td>
                  Modifiable Students and Courses
                </td>
                <td
                  container="body"
                >
                   5 Nov 2018 
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    routerlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td>
                  Nothing modifiable
                </td>
                <td
                  container="body"
                >
                   2 Feb 2019 
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header archive-course-header bg-info"
        id="archived-table-heading"
      >
        <div
          class="row text-white align-items-center"
        >
          <div
            class="col-6"
          >
            <b>
              Archive
            </b>
          </div>
          <div
            class="col-6 text-right"
          >
            
            <i
              class="fas fa-chevron-down"
            />
            
          </div>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header recycle-bin-header"
          id="deleted-table-heading"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-4 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-8 text-right bin-header-button"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled text-danger"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  hasLoadingFailed="false"
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td>
                  Modifiable Students and Courses
                </td>
                <td
                  container="body"
                >
                   5 Nov 2018 
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    routerlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td>
                  Nothing modifiable
                </td>
                <td
                  container="body"
                >
                   2 Feb 2019 
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  
                  
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header archive-course-header bg-info"
        id="archived-table-heading"
      >
        <div
          class="row text-white align-items-center"
        >
          <div
            class="col-6"
          >
            <b>
              Archive
            </b>
          </div>
          <div
            class="col-6 text-right"
          >
            
            <i
              class="fas fa-chevron-down"
            />
            
          </div>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header recycle-bin-header"
          id="deleted-table-heading"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-4 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-8 text-right bin-header-button"
            >
              
              <button
                class="btn btn-light btn-sm"
                id="btn-restore-all"
                ngbtooltip="Restore all deleted courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              
              <button
                class="btn btn-light btn-sm text-danger"
                id="btn-delete-all"
                ngbtooltip="Permanently delete all courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  hasLoadingFailed="false"
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  hasLoadingFailed="false"
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    
    
    
    <div>
      
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    
                    
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td>
                  Modifiable Students and Courses
                </td>
                <td
                  container="body"
                >
                   5 Nov 2018 
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                      id="show-statistics-0"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    routerlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  
                  
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                      
                      
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td>
                  Nothing modifiable
                </td>
                <td
                  container="body"
                >
                   2 Feb 2019 
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                      id="show-statistics-1"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td>
                  
                  <span>
                    
                    <a
                      href="null"
                    >
                       Show 
                    </a>
                  </span>
                  
                </td>
                <td
                  class="text-center actions-cell"
                >
                  
                  
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="action-dropdown btn btn-light btn-sm dropdown-toggle"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        routerlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        routerlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      
                      
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
            
          </table>
          
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry>
</tm-instructor-courses-page>
`;
